--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,3 +20,5 @@ steps:
       env:
           - CLOUDSDK_COMPUTE_ZONE=asia-northeast3
           - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
+options:
+    logging: CLOUD_LOGGING_ONLY
