--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,9 +16,13 @@ steps:
           - set
           - image
           - deployment/gogu-market-nestjs
-          - gogu-market-nestjs-sha256-1=asia.gcr.io/gogumarket/gogu-market-nestjs:0.7
+          - gogu-market-nestjs-sha256-1=asia.gcr.io/gogumarket/gogu-market-nestjs:0.8
       env:
           - CLOUDSDK_COMPUTE_ZONE=asia-northeast3
           - CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1
+
+    - name: node
+      args:
+          - access-secret-version.js
 options:
     logging: CLOUD_LOGGING_ONLY
